# SPEMS-GPU

./: .gitignore  README.md
parEMS/: CMakeLists.txt
parEMS/cmake/: common.cmake
parEMS/cmake/modules/: FindTBB.cmake
parEMS/include/: ems.hpp  ems1.hpp  ems2.hpp  motif_tree_base.hpp  motif_tree_fast.hpp  parEMS.hpp  recursEMS.hpp  utils.h
parEMS/src/: ems.cpp  ems1.cpp  ems2.cpp  motif_tree_base.cpp  motif_tree_fast.cpp  parEMS.cpp  recursEMS.cpp  utils.cpp
parEMS/test/: CMakeLists.txt  parEMS.cpp
parEMS/test/python-test/: CMakeLists.txt  run_profiles.py
recursEMS/: Makefile  ems.cpp  ems.hpp  ems2.hpp  ems2p.hpp  motif.hpp  motif_tree.hpp  motif_tree_base.hpp  motif_tree_fast.hpp  recursEMS.hpp  utils.h
